--- a/contacts.html
+++ b/contacts.html
@@ -21,23 +21,26 @@
         </ul>
     </nav>
     <br>
-    <div class="wrapper">
-        <div class="title">
-            <h1>Contact Me</h1>
-        </div>
-        <div class="contact-form">
-            <div class="input-fields">
-                <input type="text" class="input" placeholder="Name" required> 
-                <input type="email" class="input" placeholder="Email Address" required>
-                <input type="number" class="input" placeholder="Phone" required> 
-                <input type="text" class="input" placeholder="Subject" required> 
+    <form action="https://formspree.io/f/moqzbakn" method="POST"> 
+
+        <div class="wrapper">
+            <div class="title">
+                <h1>Contact Me</h1>
             </div>
-            <div class="msg">
-                <textarea placeholder="Message"></textarea>
-                <div class="btn">Send</div>
+            <div class="contact-form">
+                <div class="input-fields">
+                    <input type="text" class="input" placeholder="Name" required> 
+                    <input type="email" class="input" placeholder="Email Address" required>
+                    <input type="number" class="input" placeholder="Phone" required> 
+                    <input type="text" class="input" placeholder="Subject" required> 
+                </div>
+                <div class="msg">
+                    <textarea placeholder="Message"></textarea>
+                    <button type="submit">Submit</button>
+                </div>
             </div>
         </div>
-    </div>
+    </form>
 
     
 
