--- a/education and experience.html
+++ b/education and experience.html
@@ -13,7 +13,7 @@
     />
     <title>Education and Experience</title>
   </head>
-  <body>
+  <body class="bg-black">
     <nav class="navbar">
       <img src="./images/ZK logo.jpg" class="img" alt="Logo" />
       <ul>
@@ -36,28 +36,28 @@
     <div class="container text-center">
       <div class="row align-items-start">
         <div class="col">
-          <h1>Education</h1>
-          <h3>Eros High School 2017-2022</h3>
+          <h1 class="textcolor">Education</h1>
+          <h3 class="textcolor">Eros High School 2017-2022</h3>
           <img src="./images/Eros High Img.jpg" class="schoolpic" alt="" />
         </div>
         <div class="col">
-          <h1>Experience</h1>
-          <h3>LifeChoice 2023</h3>
+          <h1 class="textcolor">Experience</h1>
+          <h3 class="textcolor">LifeChoice 2023</h3>
           <img src="./images/Life Choices Img.jpg" class="schoolpic" alt="" />
         </div>
         <div class="col">
-          <h1>Skills</h1>
+          <h1 class="textcolor">Skills</h1>
           <div class="css">
-            <h3>CSS</h3>
+            <h3 class="textcolor">CSS</h3>
             <img src="./images/CSS3_logo.png" class="logo" alt="" />
           </div>
           <div class="java">
-            <h3>Javascript</h3>
-            <img src="./images/javascript logo.png" class="logo" alt="" />
+            <h3 class="textcolor">Javascript</h3>
+            <img src="./images/js.png" class="logo" alt="" />
           </div>
           <div class="bootstrap">
-            <h3>Bootstrap</h3>
-            <img src="./images/bootstrap logo.jpg" class="logo" alt="" />
+            <h3 class="textcolor">Bootstrap</h3>
+            <img src="./images/bs.png" class="logo" alt="" />
           </div>
         </div>
       </div>
