--- a/home.html
+++ b/home.html
@@ -24,9 +24,9 @@
 
         <div class="d-flex justify-content-center align-items-center home-page">
             <div>
-                <h1 class="text-center m-4 text-white">Hi,</h1>
-                <h1 class="text-center m-4 text-white">I'm Zia Khan</h1>
-                <h3 class="text-center m-4 text-white">I want to pursue a career in Web Development</h3>
+                <h1 class="text-center m-4 text-white">Welcome to my Portfolio</h1>
+                <h1 class="text-center m-4 text-white">Hi, I'm Zia Khan</h1>
+                <h3 class="text-center m-4 text-white">Aspiring Web Developer</h3>
             </div>
             <img src="./images/zia.jpg" style="border-radius: 50; height: 20rem;width: 20rem;" class="m-0" id="zia">
       </div>
