--- a/about.html
+++ b/about.html
@@ -5,11 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/about.css">
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+  />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+  />
     <title>About</title>
-
+    
 </head>
-<body>
+<body class="bg-black">
     <nav class="navbar">
         <img src="./images/ZK logo.jpg" class="img" alt="Logo">
         <ul>
@@ -21,9 +29,11 @@
             <li><a href="contacts.html">Contact</a></li>
         </ul>
     </nav><br>
-    <h1>About</h1>
-    <br>
-    <h5>I have a lot of  drive and desire. I regularly establish objectives for myself because I enjoy difficulties and need something to work toward. I don't enjoy taking things easy, and I'm constantly seeking for ways to improve and excel.
-        I was born in Cape Town, South Africa, at the age of 20. I study information technology at Life Choices Academy and hope to work in web development in the future. graduated in 2022 from Eros High School. I'm amiable, diligent, and very mature. I've always had a fascination with technology. As a result, I take pleasure in interacting and working with others.</h5>
+    <div class="text">
+        <h1 class="animate__animated animate__jello">About Me</h1>
+        <br>
+        <h5 class="animate__animated animate__jello">I have a lot of  drive and desire. I regularly establish objectives for myself because I enjoy difficulties and need something to work toward. I don't enjoy taking things easy, and I'm constantly seeking for ways to improve and excel.
+            I was born in Cape Town, South Africa. At the age of 20 I study information technology at Life Choices Academy and hope to work in web development in the future. Graduated in 2022 from Eros High School. I'm amiable, diligent, and very mature. I've always had a fascination with technology. As a result, I take pleasure in interacting and working with others.</h5>
+    </div>
 </body>
 </html>
