--- a/contacts.html
+++ b/contacts.html
@@ -9,40 +9,62 @@
     <title>Contacts</title>
 </head>
 <body class="bg-black">
-    <nav class="navbar">
-        <img src="./images/ZK logo.jpg" class="img" alt="Logo">
-        <ul>
-            <li><a href="home.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="education and experience.html">Education & Experience</a></li>
-            <li><a href="testimonials.html">Testimonials</a></li>
-            <li><a href="projects.html">Projects</a></li>
-            <li><a href="contacts.html">Contact</a></li>
-        </ul>
-    </nav>
+    <header>
+        <nav class="navbar navbar-expand-lg bg-black text-uppercase">
+            <div class="container-fluid">
+              <a class="navbar-brand" href="#"><img src="./images/ZK logo.jpg" class="img w-25" alt="Logo"></a>
+              <button class="navbar-toggler bg-white" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse justify-content-end" id="navbarNavDropdown">
+                <ul class="navbar-nav">
+                  <li class="nav-item">
+                    <a class="nav-link active text-white" aria-current="page" href="./index.html">Home</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link text-white" href="#about-me">About Me</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link text-white" href="#edu">education and experience</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link text-white" href="#projects">projects</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link text-white" href="./testimonials.html">testimonials</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link text-white" href="#contact">contact me</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </nav>
+    </header>
     <br>
     <form action="https://formspree.io/f/moqzbakn" method="POST"> 
 
-        <div class="wrapper">
-            <div class="title">
-                <h1>Contact Me</h1>
-            </div>
-            <div class="contact-form">
-                <div class="input-fields">
-                    <input type="text" class="input" placeholder="Name" required> 
-                    <input type="email" class="input" placeholder="Email Address" required>
-                    <input type="number" class="input" placeholder="Phone" required> 
-                    <input type="text" class="input" placeholder="Subject" required> 
-                </div>
-                <div class="msg">
-                    <textarea placeholder="Message"></textarea>
-                    <button type="submit">Submit</button>
-                </div>
-            </div>
-        </div>
-    </form>
+      <div class="wrapper">
+          <div class="title">
+              <h1>Contact Me</h1>
+          </div>
+          <div class="contact-form">
+              <div class="input-fields">
+                  <input type="text" class="input" placeholder="Name" required> 
+                  <input type="email" class="input" placeholder="Email Address" required>
+                  <input type="number" class="input" placeholder="Phone" required> 
+                  <input type="text" class="input" placeholder="Subject" required> 
+              </div>
+              <div class="msg">
+                  <textarea placeholder="Message"></textarea>
+                  <button type="submit">Submit</button>
+              </div>
+          </div>
+      </div>
+  </form>
 
-    
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+
 
 
 </body>
