--- a/index.html
+++ b/index.html
@@ -4,20 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/about.css">
-    <link
-    rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
-  />
+    <link rel="stylesheet" href="./css/home.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-    <link
-    rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
-  />
-    <title>About</title>
-    
+    <title>Home</title>
 </head>
 <body class="bg-black">
+
     <header>
         <nav class="navbar navbar-expand-lg bg-black text-uppercase">
             <div class="container-fluid">
@@ -28,7 +20,7 @@
               <div class="collapse navbar-collapse justify-content-end" id="navbarNavDropdown">
                 <ul class="navbar-nav">
                   <li class="nav-item">
-                    <a class="nav-link active text-white" aria-current="page" href="./about.html">Home</a>
+                    <a class="nav-link active text-white" aria-current="page" href="./index.html">Home</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link text-white" href="./about.html">About Me</a>
@@ -49,15 +41,21 @@
               </div>
             </div>
           </nav>
-    </header>
-    <br>
-    <div class="text">
-        <h1 class="animate__animated animate__jello">About Me</h1>
-        <br>
-        <h5>I have a lot of  drive and desire. I regularly establish objectives for myself because I enjoy difficulties and need something to work toward. I don't enjoy taking things easy, and I'm constantly seeking for ways to improve and excel.
-            I was born in Cape Town, South Africa. At the age of 20 I study information technology at Life Choices Academy and hope to work in web development in the future. Graduated in 2022 from Eros High School. I'm amiable, diligent, and very mature. I've always had a fascination with technology. As a result, I take pleasure in interacting and working with others.</h5>
-    </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+    </header> 
+      
+
+
+        <div class="d-flex justify-content-center align-items-center home-page">
+            <div>
+                <h1 class="text-center m-4 text-white">Welcome to my Portfolio</h1>
+                <h1 class="text-center m-4 text-white">Hi, I'm Zia Khan</h1>
+                <h3 class="text-center m-4 text-white">Aspiring Web Developer</h3>
+            </div>
+            <img src="./images/zia.jpg" style="border-radius: 50; height: 20rem;width: 20rem;" class="m-0" id="zia">
+      </div>
+
+   
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 
 </body>
 </html>
