--- a/contacts.html
+++ b/contacts.html
@@ -44,24 +44,29 @@
     <br>
     <form action="https://formspree.io/f/moqzbakn" method="POST"> 
 
-      <div class="wrapper">
+      <div class="wrapper d-flex flex-column align-items-center">
           <div class="title">
               <h1>Contact Me</h1>
           </div>
           <div class="contact-form">
               <div class="input-fields">
-                  <input type="text" class="input" placeholder="Name" required> 
-                  <input type="email" class="input" placeholder="Email Address" required>
-                  <input type="number" class="input" placeholder="Phone" required> 
-                  <input type="text" class="input" placeholder="Subject" required> 
+                  <input type="text" class="input" placeholder="Name" name="name" required> 
+                  <input type="email" class="input" placeholder="Email Address" name="email" required>
+                  <input type="number" class="input" placeholder="Phone" name="number" required>  
+                  <textarea placeholder="Message" name="message" required></textarea>
               </div>
-              <div class="msg">
-                  <textarea placeholder="Message"></textarea>
-                  <button type="submit">Submit</button>
-              </div>
-          </div>
+            </div>
+            <div class="msg">
+                <button type="submit">Submit</button>
+            </div>
       </div>
   </form>
+
+
+    <footer class="text-white">
+    COPYRIGHT 2023 &copy; ZIA KHAN
+    </footer>
+
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 
