--- a/education.html
+++ b/education.html
@@ -18,13 +18,13 @@
       <nav class="navbar navbar-expand-lg bg-black text-uppercase">
           <div class="container-fluid">
             <a class="navbar-brand" href="#"><img src="./images/ZK logo.jpg" class="img w-25" alt="Logo"></a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler bg-white" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse justify-content-end" id="navbarNavDropdown">
               <ul class="navbar-nav">
                 <li class="nav-item">
-                  <a class="nav-link active text-white" aria-current="page" href="./about.html">Home</a>
+                  <a class="nav-link active text-white" aria-current="page" href="./index.html">Home</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link text-white" href="./about.html">About Me</a>
@@ -81,6 +81,13 @@
         </div>
       </div>
     </div>
+
+    <div style="display: flex; justify-content: center; align-content: center;">
+      <footer class="text-white">
+       COPYRIGHT 2023 &copy; ZIA KHAN
+      </footer>
+    </div>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 
   </body>
