--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <nav class="navbar navbar-expand-lg bg-black text-uppercase">
             <div class="container-fluid">
               <a class="navbar-brand" href="#"><img src="./images/ZK logo.jpg" class="img w-25" alt="Logo"></a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+              <button class="navbar-toggler bg-white" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
               <div class="collapse navbar-collapse justify-content-end" id="navbarNavDropdown">
@@ -51,11 +51,15 @@
                 <h1 class="text-center m-4 text-white">Hi, I'm Zia Khan</h1>
                 <h3 class="text-center m-4 text-white">Aspiring Web Developer</h3>
             </div>
-            <img src="./images/zia.jpg" style="border-radius: 50; height: 20rem;width: 20rem;" class="m-0" id="zia">
+            <img src="./images/zia.jpg" style="border-radius: 50; height: 15rem;width: 15rem;" class="m-0" id="zia">
       </div>
-
-   
+      
+      <div style="display: flex; justify-content: center; align-content: center;">
+        <footer class="text-white">
+         COPYRIGHT 2023 &copy; ZIA KHAN
+        </footer>
+      </div>
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
-
+      
 </body>
 </html>
