--- a/education.html
+++ b/education.html
@@ -54,29 +54,40 @@
 
     <div class="container text-center">
       <div class="row align-items-start">
-        <div class="col">
-          <h1 class="textcolor">Education</h1>
-          <h3 class="textcolor">Eros High School 2017-2022</h3>
-          <img src="./images/Eros High Img.jpg" class="schoolpic" alt="" />
+        <div class="d-flex edu-imgs">
+          <div class="col">
+            <h1 class="textcolor">Education</h1>
+            <h3 class="textcolor">Eros High School 2017-2022</h3>
+            <img src="./images/Eros High Img.jpg" class="schoolpic" alt="" />
+          </div>
+          <div class="col">
+            <h1 class="textcolor">Experience</h1>
+            <h3 class="textcolor">LifeChoice 2023</h3>
+            <img src="./images/Life Choices Img.jpg" class="schoolpic" alt="" />
+          </div>
         </div>
-        <div class="col">
-          <h1 class="textcolor">Experience</h1>
-          <h3 class="textcolor">LifeChoice 2023</h3>
-          <img src="./images/Life Choices Img.jpg" class="schoolpic" alt="" />
-        </div>
-        <div class="col">
+        <div class="col ">
           <h1 class="textcolor">Skills</h1>
           <div class="css">
             <h3 class="textcolor">CSS</h3>
-            <img src="./images/CSS3_logo.png" class="logo" alt="" />
+            <div class="progress w-75">
+              <div class="progress-bar bg-primary" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">25%</div>
+            </div>
+            <img src="./images/CSS3_logo.png" class="logo" style="height: 8rem; width: 8rem;" alt="" />
           </div>
-          <div class="java">
-            <h3 class="textcolor">Javascript</h3>
-            <img src="./images/js.png" class="logo" alt="" />
+          <div class="html">
+            <h3 class="textcolor">HTML</h3>
+            <div class="progress w-75">
+              <div class="progress-bar bg-danger" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">25%</div>
+            </div>
+            <img src="./images/pngegg.png" class="logo d-flex justify-content-center" style="height: 9rem; width: 9rem;" alt="" />
           </div>
           <div class="bootstrap">
             <h3 class="textcolor">Bootstrap</h3>
-            <img src="./images/bs.png" class="logo" alt="" />
+            <div class="progress w-75">
+              <div class="progress-bar" id="purple-color" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">25%</div>
+            </div>
+            <img src="./images/bs.png" class="logo" style="height: 8rem; width: 8rem;" alt="" />
           </div>
         </div>
       </div>
