--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       
 
 
-        <div class="d-flex justify-content-center align-items-center home-page">
+        <div class="d-flex justify-content-center align-items-center home-page" style="height: 64svh;">
             <div>
                 <h1 class="text-center m-4 text-white">Welcome to my Portfolio</h1>
                 <h1 class="text-center m-4 text-white">Hi, I'm Zia Khan</h1>
