--- a/testimonials.html
+++ b/testimonials.html
@@ -42,6 +42,10 @@
       </nav>
 </header>
 
+      <div class="d-flex justify-content-center align-items-center">
+        <h1 class="text-center m-4 text-white">Testimonials</h1>
+      </div>
+
     <div class="d-flex gap-4 m-5 flex-test">
     <div class="card" style="width: 18rem;">
         
