--- a/html/about.html
+++ b/html/about.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/about.css">
+    <link rel="stylesheet" href="/css/about.css">
     <link
     rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
@@ -21,14 +21,14 @@
     <header>
         <nav class="navbar navbar-expand-lg bg-black text-uppercase">
             <div class="container-fluid">
-              <a class="navbar-brand" href="#"><img src="./images/ZK logo.jpg" class="img w-25" alt="Logo"></a>
+              <a class="navbar-brand" href="/index.html"><img src="/images/ZK logo.jpg" class="img w-25" alt="Logo"></a>
               <button class="navbar-toggler bg-white" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
               <div class="collapse navbar-collapse justify-content-end" id="navbarNavDropdown">
                 <ul class="navbar-nav">
                   <li class="nav-item">
-                    <a class="nav-link active text-white" aria-current="page" href="./index.html">Home</a>
+                    <a class="nav-link active text-white" aria-current="page" href="/index.html">Home</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link text-white" href="./about.html">About Me</a>
