--- a/html/education.html
+++ b/html/education.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./css/education and experience.css" />
+    <link rel="stylesheet" href="/css/education and experience.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -17,14 +17,14 @@
     <header>
       <nav class="navbar navbar-expand-lg bg-black text-uppercase">
           <div class="container-fluid">
-            <a class="navbar-brand" href="#"><img src="./images/ZK logo.jpg" class="img w-25" alt="Logo"></a>
+            <a class="navbar-brand" href="/index.html"><img src="/images/ZK logo.jpg" class="img w-25" alt="Logo"></a>
             <button class="navbar-toggler bg-white" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse justify-content-end" id="navbarNavDropdown">
               <ul class="navbar-nav">
                 <li class="nav-item">
-                  <a class="nav-link active text-white" aria-current="page" href="./index.html">Home</a>
+                  <a class="nav-link active text-white" aria-current="page" href="/index.html">Home</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link text-white" href="./about.html">About Me</a>
@@ -58,12 +58,12 @@
           <div class="col">
             <h1 class="textcolor">Education</h1>
             <h3 class="textcolor">Eros High School 2017-2022</h3>
-            <img src="./images/Eros High Img.jpg" class="schoolpic" alt="" />
+            <img src="/images/Eros High Img.jpg" class="schoolpic" alt="" />
           </div>
           <div class="col">
             <h1 class="textcolor">Experience</h1>
             <h3 class="textcolor">LifeChoice 2023</h3>
-            <img src="./images/Life Choices Img.jpg" class="schoolpic" alt="" />
+            <img src="/images/Life Choices Img.jpg" class="schoolpic" alt="" />
           </div>
         </div>
         <div class="col ">
@@ -73,21 +73,21 @@
             <div class="progress w-75">
               <div class="progress-bar bg-primary" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">25%</div>
             </div>
-            <img src="./images/CSS3_logo.png" class="logo" style="height: 8rem; width: 8rem;" alt="" />
+            <img src="/images/CSS3_logo.png" class="logo" style="height: 8rem; width: 8rem;" alt="" />
           </div>
           <div class="html">
             <h3 class="textcolor">HTML</h3>
             <div class="progress w-75">
               <div class="progress-bar bg-danger" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">25%</div>
             </div>
-            <img src="./images/pngegg.png" class="logo d-flex justify-content-center" style="height: 9rem; width: 9rem;" alt="" />
+            <img src="/images/pngegg.png" class="logo d-flex justify-content-center" style="height: 9rem; width: 9rem;" alt="" />
           </div>
           <div class="bootstrap">
             <h3 class="textcolor">Bootstrap</h3>
             <div class="progress w-75">
               <div class="progress-bar" id="purple-color" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">25%</div>
             </div>
-            <img src="./images/bs.png" class="logo" style="height: 8rem; width: 8rem;" alt="" />
+            <img src="/images/bs.png" class="logo" style="height: 8rem; width: 8rem;" alt="" />
           </div>
         </div>
       </div>
