--- a/html/projects.html
+++ b/html/projects.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/projects.css">
+    <link rel="stylesheet" href="/css/projects.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <title>Projects</title>
 </head>
@@ -12,14 +12,14 @@
     <header>
       <nav class="navbar navbar-expand-lg bg-black text-uppercase">
           <div class="container-fluid">
-            <a class="navbar-brand" href="#"><img src="./images/ZK logo.jpg" class="img w-25" alt="Logo"></a>
+            <a class="navbar-brand" href="/index.html"><img src="/images/ZK logo.jpg" class="img w-25" alt="Logo"></a>
             <button class="navbar-toggler bg-white" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse justify-content-end" id="navbarNavDropdown">
               <ul class="navbar-nav">
                 <li class="nav-item">
-                  <a class="nav-link active text-white" aria-current="page" href="./index.html">Home</a>
+                  <a class="nav-link active text-white" aria-current="page" href="/index.html">Home</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link text-white" href="./about.html">About Me</a>
@@ -46,8 +46,8 @@
    
     <div class="move">
     <div class="card" style="width: 16rem;">
-      <img class="card-img-top" src="./images/sign up page project.png" alt="Card image cap" style ="border-radius: 0%;">
-      <img class="card-img-top" src="./images/Login page project.png" alt="Card image cap" style ="border-radius: 0%;">
+      <img class="card-img-top" src="/images/sign up page project.png" alt="Card image cap" style ="border-radius: 0%;">
+      <img class="card-img-top" src="/images/Login page project.png" alt="Card image cap" style ="border-radius: 0%;">
       <div class="card-body">
         <h5 class="card-title">Sign Up & Login</h5>
         <p class="card-text">this was a group project and i  was tasked to create sign up and login page</p>
