--- a/html/testimonials.html
+++ b/html/testimonials.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/testimonials.css">
+    <link rel="stylesheet" href="/css/testimonials.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <title>Testimonials</title>
 </head>
@@ -12,14 +12,14 @@
   <header>
     <nav class="navbar navbar-expand-lg bg-black text-uppercase">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#"><img src="./images/ZK logo.jpg" class="img w-25" alt="Logo"></a>
+          <a class="navbar-brand" href="/index.html"><img src="/images/ZK logo.jpg" class="img w-25" alt="Logo"></a>
           <button class="navbar-toggler bg-white" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse justify-content-end" id="navbarNavDropdown">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link active text-white" aria-current="page" href="./index.html">Home</a>
+                <a class="nav-link active text-white" aria-current="page" href="/index.html">Home</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link text-white" href="./about.html">About Me</a>
@@ -49,7 +49,7 @@
     <div class="d-flex gap-4 m-5 flex-test">
     <div class="card" style="width: 18rem;">
         
-        <img src="./images/C12 Justin Scholtz (2)-min.JPG" class="card-img-top" alt="...">
+        <img src="/images/C12 Justin Scholtz (2)-min.JPG" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">Justin Scholz</h5>
           <p class="card-text">From the first day I met Zia he was a vey quiet person and kept to himself, but as time went on I've noticed how he came out of his shell which showed me that he is not afraid to come out his comfort zone and adapt to the environment around him which is a very good quality of Zia. Once his mind is set on something then he is very determined to accomplish it and I admire that about him. Definitely the type of person I would want on my team!</p>
@@ -58,7 +58,7 @@
 
     </div>
     <div class="card" style="width: 18rem;">
-            <img src="./images/t0.jpg" class="card-img-top" alt="...">
+            <img src="/images/t0.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Imraan Bernksen</h5>
               <p class="card-text">Zia is a very punctual person, always on time. He is a very passionate person on the things he loves to do and friendly which allows him adapt in group projects. His ideas are unique and creative. Always keen to learn, obtain new skills and not afraid for ask for help.</p>
@@ -68,7 +68,7 @@
 
     
         <div class="card" style="width: 18rem;">
-            <img src="./images/20230509_171206.jpg" class="card-img-top" alt="...">
+            <img src="/images/20230509_171206.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Summer De Wet</h5>
               <p class="card-text">Zia is a very dedicated person and always tries his best for everything that he does. He works very hard to get things done and doesnt stop until the task is completed. He is very friendly and always tries his best. I would definitely recommend him because he will be an asset to the team.</p>
@@ -76,7 +76,7 @@
             </div>
     </div>
             <div class="card" style="width: 18rem;">
-                <img src="./images/lee.jpg" class="card-img-top" alt="...">
+                <img src="/images/lee.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Lithini Skhikhi</h5>
                   <p class="card-text">Zia is very patient and hardworking person he would be an asset to any team . He has a caring and devoted nature . He is  a very persistent person and takes pride in his work . he is a extremely focused and goal driven .</p>
@@ -84,7 +84,7 @@
                 </div>
             </div>
                 <div class="card" style="width: 18rem;">
-                    <img src="./images/C12 Justin Scholtz (2)-min.JPG" class="card-img-top" alt="...">
+                    <img src="/images/C12 Justin Scholtz (2)-min.JPG" class="card-img-top" alt="...">
                     <div class="card-body">
                       <h5 class="card-title">Justin Scholz</h5>
                       <p class="card-text">From the first day I met Zia he was a vey quiet person and kept to himself, but as time went on I've noticed how he came out of his shell which showed me that he is not afraid to come out his comfort zone and adapt to the environment around him which is a very good quality of Zia. Once his mind is set on something then he is very determined to accomplish it and I admire that about him. Definitely the type of person I would want on my team!</p>
