--- a/index.html
+++ b/index.html
@@ -23,19 +23,19 @@
                     <a class="nav-link active text-white" aria-current="page" href="./index.html">Home</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link text-white" href="./about.html">About Me</a>
+                    <a class="nav-link text-white" href="./html/about.html">About Me</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link text-white" href="./education.html">education and experience</a>
+                    <a class="nav-link text-white" href="./html/education.html">education and experience</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link text-white" href="./projects.html">projects</a>
+                    <a class="nav-link text-white" href="./html/projects.html">projects</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link text-white" href="./testimonials.html">testimonials</a>
+                    <a class="nav-link text-white" href="./html/testimonials.html">testimonials</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link text-white" href="./contacts.html">contact me</a>
+                    <a class="nav-link text-white" href="./html/contacts.html">contact me</a>
                   </li>
                 </ul>
               </div>
