--- a/html/testimonials.html
+++ b/html/testimonials.html
@@ -84,10 +84,10 @@
                 </div>
             </div>
                 <div class="card" style="width: 18rem;">
-                    <img src="/images/C12 Justin Scholtz (2)-min.JPG" class="card-img-top" alt="...">
+                    <img src="/images/FB_IMG_1655905446197.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
-                      <h5 class="card-title">Justin Scholz</h5>
-                      <p class="card-text">From the first day I met Zia he was a vey quiet person and kept to himself, but as time went on I've noticed how he came out of his shell which showed me that he is not afraid to come out his comfort zone and adapt to the environment around him which is a very good quality of Zia. Once his mind is set on something then he is very determined to accomplish it and I admire that about him. Definitely the type of person I would want on my team!</p>
+                      <h5 class="card-title">Abdul-Azeez Kemp</h5>
+                      <p class="card-text">An absolute great guy, hard worker and a goal driven personality. Always takes on the next challenge that comes to him and knows how to communicate with his peers.</p>
                     </div>
             </div>
     </div>
